Work in Progress update

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Work in Progress</title>
+</head>
+<body>
+<div>
+    Hello World! This is a work in progress.
+</div>
+</body>
+</html>
