--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
 </head>
 <body>
 <div>
-    Hello World! This is a work in progress.
+    Hello World!
 </div>
+
+<marquee direction="down" width="768" height="500" behavior="alternate" style="border:solid">
+  <marquee behavior="alternate">
+    This is a work in progress
+  </marquee>
+</marquee>
 </body>
 </html>
