--- a/index.html
+++ b/index.html
@@ -1,17 +1,255 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Work in Progress</title>
-</head>
-<body>
-<div>
-    Hello World!
-</div>
+<html lang="en">
 
-<marquee direction="down" width="768" height="500" behavior="alternate" style="border:solid">
-  <marquee behavior="alternate">
-    This is a work in progress
-  </marquee>
-</marquee>
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Basille Feliz Simplicio</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom fonts for this template -->
+  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="css/resume.min.css" rel="stylesheet">
+
+</head>
+
+<body id="page-top">
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">
+      <span class="d-block d-lg-none">Basille Feliz Simplicio</span>
+      <span class="d-none d-lg-block">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profpic.jpg" alt="">
+      </span>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#sampleworks">Sample Works</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="container-fluid p-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
+      <div class="w-100">
+        <h1 class="mb-0">Basille Feliz 
+          <span class="text-primary">Simplicio</span>
+        </h1>
+        <div class="subheading mb-5">Davao City, PH 8000 · (+63) 947-963-2449 ·
+          <a href="mailto:name@email.com">basillefelizsimplicio@gmail.com</a>
+        </div>
+        <p class="lead mb-5">I am a team player and adaptive. I love organizing stuff in everything I do, especially bugs that I find. Nobody likes finding bugs as much as I do. I play the guitar or paint using watercolor in my free time.</p>
+        <div class="social-icons">
+          <a href="https://www.linkedin.com/in/basille-feliz-simplicio-78762166">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-github"></i>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+      <div class="w-100">
+        <h2 class="mb-5">Experience</h2>
+        <p class="lead mb-5">I have more than 5 years of experience in Quality Assurance and Testing; with deep knowledge in planning, writing, and executing tests for web and mobile applications.</p>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Ingenuity Global Consulting</h3>
+            <div class="subheading mb-3">Software Tester</div>
+            <p>Assigned to multiple projects involving understanding the requirements, conducting tests on the application using different test scenarios on different browsers, documenting issues found, creating bug reports or tickets including detailed steps to reproduce, actual output and expected to result. </p><p>Main tester in an internal ERP project using the Odoo framework and created user documentation through Sphinx. I performed running of scripts provided by the developers and executed tests using a subversion repository. Most of the projects I worked used Agile methodology.</p>   
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2013 - July 2020</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Spiralyze</h3>
+            <div class="subheading mb-3">QA Engineer</div>
+            <p>Responsible for testing websites from different clients through A/B testing. I served as a Senior Tester. I take on the QA Lead role when my superior is not available. My responsibilities include assigning QA tasks to Junior testers, doing final QA before forwarding it to the Project Manager.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2018 - Present</span>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
+      <div class="w-100">
+        <h2 class="mb-5">Education</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">University of Philippines Mindanao</h3>
+            <div class="subheading mb-3">Bachelor of Science</div>
+            <div>Computer Science</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2008 - April 2013</span>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
+      <div class="w-100">
+        <h2 class="mb-5">Skills</h2>
+
+        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        <ul class="list-inline dev-icons">
+          <li class="list-inline-item">
+            <i class="fab fa-html5"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-css3-alt"></i>
+          <li class="list-inline-item">
+            <i class="fab fa-react"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-node-js"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-python"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-wordpress"></i>
+          </li>
+        </ul>
+        <div class="subheading mb-3">Testing Skills</div>
+        <div class="container-fluid">
+            <div class="row">
+
+                <div class="mb-3 col-md-4">Manual Testing
+                    <div class="progress progress-striped">
+                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="20"
+                            aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+                            <span>9/10</span>
+                        </div>
+                    </div>
+                </div> 
+                <div class="mb-3 col-md-4">Test Automation
+                    <div class="progress progress-striped">
+                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="20"
+                            aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                            <span>8/10</span>
+                        </div>
+                    </div>
+                </div> 
+                <div class="mb-3 col-md-4">Mobile Testing
+                    <div class="progress progress-striped">
+                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="20"
+                            aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+                            <span>7/10</span>
+                        </div>
+                    </div>
+                </div>  
+                <div class="mb-3 col-md-4">Functional Testing
+                    <div class="progress progress-striped">
+                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="20"
+                            aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+                            <span>7/10</span>
+                        </div>
+                    </div>
+                </div>  
+                <div class="mb-5 col-md-4">A/B Testing
+                    <div class="progress progress-striped">
+                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="20"
+                            aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                            <span>8/10</span>
+                        </div>
+                    </div>
+                </div>  
+            </div>
+        </div>
+
+        <div class="subheading mb-3">Workflow</div>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            To be updated</li>
+        </ul>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
+      <div class="w-100">
+        <h2 class="mb-5">Interests</h2>
+        <p>To be updated</p>
+        <p class="mb-0"></p>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="sampleworks">
+      <div class="w-100">
+        <h2 class="mb-5">Sample Works</h2>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            To be updated</li>
+        </ul>
+      </div>
+    </section>
+
+  </div>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="js/resume.min.js"></script>
+
 </body>
+
 </html>
