New updates - added image for profile pics - added sample works (but no proper links yet) - updated hover links

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Basille Feliz Simplicio</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profpic.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/bash.jpg" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,9 +67,9 @@
           <span class="text-primary">Simplicio</span>
         </h1>
         <div class="subheading mb-5">Davao City, PH 8000 · (+63) 947-963-2449 ·
-          <a href="mailto:name@email.com">basillefelizsimplicio@gmail.com</a>
+          <a href="mailto:basillefelizsimplicio@gmail.com">basillefelizsimplicio@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am a team player and adaptive. I love organizing stuff in everything I do, especially bugs that I find. Nobody likes finding bugs as much as I do. I play the guitar or paint using watercolor in my free time.</p>
+        <p class="lead mb-5">Full-time Software Tester. Occasional Web Developer. Avid Jason Mraz fan.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/basille-feliz-simplicio-78762166">
             <i class="fab fa-linkedin-in"></i>
@@ -90,7 +90,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Ingenuity Global Consulting</h3>
+            <h3 class="mb-0"><a href="https://ingenuity.ph/about/" target="_blank">Ingenuity Global Consulting</a></h3>
             <div class="subheading mb-3">Software Tester</div>
             <p>Assigned to multiple projects involving understanding the requirements, conducting tests on the application using different test scenarios on different browsers, documenting issues found, creating bug reports or tickets including detailed steps to reproduce, actual output and expected to result. </p><p>Main tester in an internal ERP project using the Odoo framework and created user documentation through Sphinx. I performed running of scripts provided by the developers and executed tests using a subversion repository. Most of the projects I worked used Agile methodology.</p>   
           </div>
@@ -101,7 +101,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Spiralyze</h3>
+            <h3 class="mb-0"><a href="https://spiralyze.com/about/" target="_blank">Spiralyze</a></h3>
             <div class="subheading mb-3">QA Engineer</div>
             <p>Responsible for testing websites from different clients through A/B testing. I served as a Senior Tester. I take on the QA Lead role when my superior is not available. My responsibilities include assigning QA tasks to Junior testers, doing final QA before forwarding it to the Project Manager.</p>
           </div>
@@ -233,7 +233,11 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            To be updated</li>
+            <a href="#" target="_blank">Bug Report Tool</a></li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <a href="#" target="_blank">Fan Site</a></li>
+            
         </ul>
       </div>
     </section>
