--- a/index.html
+++ b/index.html
@@ -110,28 +110,6 @@
           </div>
         </div>
         
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0"><a href="https://www.rev365.com/about" target="_blank">Rev365</a></h3>
-            <div class="subheading mb-3">QA Engineer</div>
-            <p>Responsible for testing websites from clients of different backgrounds. I serve as the main QA for all the client projects. All tasks are checked by me before moving it for Acceptance. The websites are either from Shopify or their platform. I'm also responsibile for doing accessibility testing of websites by running an ADA compliance scan. Created project documentations for each project being tested. </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">July 2020 - Present</span>
-          </div>
-        </div>
-        
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0"><a href="https://kasisto.com/about/" target="_blank">Kasisto</a></h3>
-            <div class="subheading mb-3">QA Engineer</div>
-            <p>Responsible for creating automated tests for the platform being developed through Robot framework.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2021 - Present</span>
-          </div>
-        </div>
-      </div>
 
     </section>
 
@@ -248,8 +226,20 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"><a href="#" target="_blank">Study the project.</a></h3>
-            <p>Gather necessary data of the project. </p>
+            <h3 class="mb-0">Study and learn about the project.</h3>
+            <p>Gather necessary data of the project. Check any documentations available.</p>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Do exploratory testing.</h3>
+            <p>To learn more about the project, I do exploratory testing of the current website. </p>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Check the current workflow.</h3>
+            <p>This is where I check the project management tool for any current QA items.</p>
           </div>
         </div>
         <p class="mb-0"></p>
@@ -283,13 +273,13 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0"><a href="#" target="_blank">Nightwatch JS</a></h3>
-            <p>Responsible for creating automated tests for the platform being developed through Robot framework.</p>
+            <p>Responsible for creating automated tests for the platform being developed through NightwatchJS framework.</p>
           </div>
         </div>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0"><a href="#" target="_blank">Python Automated Testing</a></h3>
-            <p>Responsible for creating automated tests for the platform being developed through Robot framework.</p>
+            <p>Responsible for creating automated tests for the platform being developed through Python.</p>
           </div>
         </div>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
