--- a/index.html
+++ b/index.html
@@ -257,22 +257,22 @@
         <h3 class="mb-5">Web Development</h2>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"><a href="#" target="_blank">Bug Report Tool</a></h3>
+            <h3 class="mb-0"><a href="https://github.com/bashsimplicio/bugtracker" target="_blank">Bug Report Tool</a></h3>
             <p>This is a simple CRUD project that generates report of the bugs being added. The idea is to monitor bugs being reported by the QA and analyze the performance of the project
                 as it is being developed. This is created using React with Rest API framework.</p>
           </div>
         </div>
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0"><a href="#" target="_blank">Fan Site</a></h3>
             <p>This is a CMS website which displays the website of my favorite actor (Richard Yap) and artist (Jason Mraz).</p>
           </div>
-        </div>
+        </div> -->
         <h3 class="mb-5">Software Testing</h2>
             <p>I have created automated testing for webpage login through different test automation framework.</p>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"><a href="#" target="_blank">Nightwatch JS</a></h3>
+            <h3 class="mb-0"><a href="https://github.com/bashsimplicio/Nightwatch-test" target="_blank">Nightwatch JS</a></h3>
             <p>Responsible for creating automated tests for the platform being developed through NightwatchJS framework.</p>
           </div>
         </div>
