updated sample works

--- a/index.html
+++ b/index.html
@@ -278,16 +278,16 @@
         </div>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"><a href="#" target="_blank">Python Automated Testing</a></h3>
+            <h3 class="mb-0"><a href="https://github.com/bashsimplicio/Python-test" target="_blank">Python Automated Testing</a></h3>
             <p>Responsible for creating automated tests for the platform being developed through Python.</p>
           </div>
         </div>
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <!--<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0"><a href="#" target="_blank">Robot Framework</a></h3>
             <p>Responsible for creating automated tests for the platform being developed through Robot framework.</p>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
