updated some texts

--- a/index.html
+++ b/index.html
@@ -71,12 +71,15 @@
         </div>
         <p class="lead mb-5">Full-time Software Tester. Occasional Web Developer. Avid Jason Mraz fan.</p>
         <div class="social-icons">
-          <a href="https://www.linkedin.com/in/basille-feliz-simplicio-78762166" target="_blank">
+          <!-- <a href="https://www.linkedin.com/in/basille-feliz-simplicio-78762166" target="_blank">
             <i class="fab fa-linkedin-in"></i>
-          </a>
-          <a href="https://github.com/bashsimplicio" target="_blank">
+          </a> -->
+          <!-- <a href="https://github.com/bashsimplicio" target="_blank">
             <i class="fab fa-github"></i>
-          </a>
+          </a> -->
+          <!-- <a href="https://github.com/bashsimplicio" target="_blank">
+            <i class="fab fa-file-export"></i>
+          </a> -->
         </div>
       </div>
     </section>
@@ -92,22 +95,22 @@
           <div class="resume-content">
             <h3 class="mb-0"><a href="https://ingenuity.ph/about/" target="_blank">Ingenuity Global Consulting</a></h3>
             <div class="subheading mb-3">Software Tester</div>
-            <p>Assigned to multiple projects involving understanding the requirements, conducting tests on the application using different test scenarios on different browsers, documenting issues found, creating bug reports or tickets including detailed steps to reproduce, actual output and expected to result. </p><p>Main tester in an internal ERP project using the Odoo framework and created user documentation through Sphinx. I performed running of scripts provided by the developers and executed tests using a subversion repository. Most of the projects I worked used Agile methodology.</p>   
+            <p>Assigned to multiple projects involved in understanding the requirements, conducting tests on the web or mobile application using different test scenarios on browsers, documenting issues found, creating bug reports or tickets including detailed steps to reproduce, actual output, and expected results. </p><p>Main tester in an internal ERP project using the Odoo framework and created user documentation through Sphinx. Performed running of scripts provided by the developers and executed tests using subversion repository. Most of the projects I worked on used Agile methodology.</p>   
           </div>
-          <div class="resume-date text-md-right">
+          <!-- <div class="resume-date text-md-right">
             <span class="text-primary">June 2013 - July 2020</span>
-          </div>
+          </div> -->
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0"><a href="https://spiralyze.com/about/" target="_blank">Spiralyze</a></h3>
             <div class="subheading mb-3">QA Engineer</div>
-            <p>Responsible for testing websites from different clients through A/B testing. I served as a Senior Tester. I take on the QA Lead role when my superior is not available. My responsibilities include assigning QA tasks to Junior testers, doing final QA before forwarding it to the Project Manager.</p>
+            <p>Responsible for testing websites from different clients through A/B testing. I served as a Senior Tester. I take on the QA Lead role when my superior is not available. My responsibilities include assigning QA tasks to Junior testers and doing final QA before forwarding it to the Project Manager.</p>
           </div>
-          <div class="resume-date text-md-right">
+          <!-- <div class="resume-date text-md-right">
             <span class="text-primary">October 2018 - Present</span>
-          </div>
+          </div> -->
         </div>
         
 
@@ -222,12 +225,12 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Workflow</h2>
-            <p class="lead mb-5">In this section I will be showing how I work.</p>
+            <p class="lead mb-5">In this section, I will be showing how I work when I onboard to a project.</p>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Study and learn about the project.</h3>
-            <p>Gather necessary data of the project. Check any documentations available.</p>
+            <p>Gather necessary data of the project. Check documentations that are available.</p>
           </div>
         </div>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -239,10 +242,10 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Check the current workflow.</h3>
-            <p>This is where I check the project management tool for any current QA items.</p>
+            <p>Look over the project management tool for any current QA items and start from there.</p>
           </div>
         </div>
-        <p class="mb-0"></p>
+        <p class="mb-0">Let's get started.</p>
       </div>
     </section>
 
@@ -257,7 +260,7 @@
         <h3 class="mb-5">Web Development</h2>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"><a href="#" target="_blank">Bug Report Tool</a></h3>
+            <h3 class="mb-0"><a href="https://github.com/bashsimplicio/bugtracker/tree/dev" target="_blank">Bug Report Tool</a></h3>
             <p>This is a simple CRUD project that generates report of the bugs being added. The idea is to monitor bugs being reported by the QA and analyze the performance of the project
                 as it is being developed. This is created using React with Rest API framework.</p>
           </div>
