--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h1 class="mb-0">Basille Feliz 
           <span class="text-primary">Simplicio</span>
         </h1>
-        <div class="subheading mb-5">Davao City, PH 8000 · <a href="tel:+63947-963-2449">(+63) 947-963-2449</a> ·
+        <div class="subheading mb-5"><a href="https://www.google.com/maps/place/Davao+City,+Davao+del+Sur/@7.2532789,125.1708767,10z/" target="_blank">Davao City, PH 8000</a> · <a href="tel:+63947-963-2449">(+63) 947-963-2449</a> ·
           <a href="mailto:basillefelizsimplicio@gmail.com">basillefelizsimplicio@gmail.com</a>
         </div>
         <p class="lead mb-5">Full-time Software Tester. Occasional Web Developer. Avid Jason Mraz fan.</p>
@@ -74,12 +74,12 @@
           <!-- <a href="https://www.linkedin.com/in/basille-feliz-simplicio-78762166" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a> -->
-          <!-- <a href="https://github.com/bashsimplicio" target="_blank">
+          <a href="https://github.com/bashsimplicio" target="_blank">
             <i class="fab fa-github"></i>
-          </a> -->
-          <!-- <a href="https://github.com/bashsimplicio" target="_blank">
-            <i class="fab fa-file-export"></i>
-          </a> -->
+          </a>
+          <a href="https://www.instagram.com/bashsimplicio" target="_blank">
+            <i class="fab fa-instagram"></i>
+          </a>
         </div>
       </div>
     </section>
