--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         </div>
         <p class="lead mb-5">Full-time Software Tester. Occasional Web Developer. Avid Jason Mraz fan.</p>
         <div class="social-icons">
-          <!-- <a href="https://www.linkedin.com/in/basille-feliz-simplicio-78762166" target="_blank">
+          <a href="https://www.linkedin.com/in/basille-feliz-simplicio-78762166" target="_blank">
             <i class="fab fa-linkedin-in"></i>
-          </a> -->
+          </a>
           <a href="https://github.com/bashsimplicio" target="_blank">
             <i class="fab fa-github"></i>
           </a>
@@ -97,9 +97,9 @@
             <div class="subheading mb-3">Software Tester</div>
             <p>Assigned to multiple projects involved in understanding the requirements, conducting tests on the web or mobile application using different test scenarios on browsers, documenting issues found, creating bug reports or tickets including detailed steps to reproduce, actual output, and expected results. </p><p>Main tester in an internal ERP project using the Odoo framework and created user documentation through Sphinx. Performed running of scripts provided by the developers and executed tests using subversion repository. Most of the projects I worked on used Agile methodology.</p>   
           </div>
-          <!-- <div class="resume-date text-md-right">
+          <div class="resume-date text-md-right">
             <span class="text-primary">June 2013 - July 2020</span>
-          </div> -->
+          </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -108,9 +108,9 @@
             <div class="subheading mb-3">QA Engineer</div>
             <p>Responsible for testing websites from different clients through A/B testing. I served as a Senior Tester. I take on the QA Lead role when my superior is not available. My responsibilities include assigning QA tasks to Junior testers and doing final QA before forwarding it to the Project Manager.</p>
           </div>
-          <!-- <div class="resume-date text-md-right">
-            <span class="text-primary">October 2018 - Present</span>
-          </div> -->
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2018 - April 2022</span>
+          </div>
         </div>
         
 
