--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <a href="https://github.com/bashsimplicio" target="_blank" label="Github Account" title="Github Account">
             <i class="fab fa-github"></i>
           </a>
-          <a download="img/bash.jpg" label="Download Resume" title="Download Resume">
+          <a download="files/BashSimplicio.pdf" label="Download Resume" title="Download Resume">
             <i class="fa-solid fa-file-pdf"></i>
           </a>
         </div>
