--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
           <a href="https://github.com/bashsimplicio" target="_blank" label="Github Account" title="Github Account">
             <i class="fab fa-github"></i>
           </a>
-          <a download="files/BashSimplicio.pdf" label="Download Resume" title="Download Resume">
-            <i class="fa-solid fa-file-pdf"></i>
+          <a href="https://bit.ly/bash-resume-copy" download="https://bit.ly/bash-resume-copy" label="View Resume" title="View Resume">
+            <i class="fa fa-eye"></i>
           </a>
         </div>
       </div>
@@ -95,7 +95,7 @@
           <div class="resume-content">
             <h3 class="mb-0"><a href="https://ingenuity.ph/about/" target="_blank">Ingenuity Global Consulting</a></h3>
             <div class="subheading mb-3">Software Tester</div>
-            <p>Assigned to multiple projects involved in understanding the requirements, conducting tests on the web or mobile application using different test scenarios on browsers, documenting issues found, creating bug reports or tickets including detailed steps to reproduce, actual output, and expected results. </p><p>Main QA in an internal ERP project using the Odoo framework and created user documentation through Sphinx. Performed running of scripts provided by the developers and executed tests using subversion repository. Most of the projects I worked on used Agile methodology.</p>   
+            <p>In my seven years with Ingenuity, I have been to multiple roles and projects.</p><p>Assigned to multiple projects involved in understanding the requirements, conducting tests on the web or mobile application using different test scenarios on browsers, documenting issues found, creating bug reports or tickets including detailed steps to reproduce, actual output, and expected results. Performed running of scripts provided by the developers and executed tests using subversion repository. Most of the projects I worked on used Agile methodology.</p><p>I was the main QA in an internal ERP project using the Odoo framework and created user documentation through Sphinx. As the main QA, I became a functional consultant for different clients using Odoo applications.</p><p>I was also a Software Developer for a limited time on an internal project to track record updates from team members per project that was sent to clients via email on a regular basis. </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">June 2013 - July 2020</span>
