resume in new tab

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <a href="https://github.com/bashsimplicio" target="_blank" label="Github Account" title="Github Account">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://bit.ly/bash-resume-copy" download="https://bit.ly/bash-resume-copy" label="View Resume" title="View Resume">
+          <a href="https://bit.ly/bash-resume-copy" download="https://bit.ly/bash-resume-copy" label="View Resume" title="View Resume" target="_blank">
             <i class="fa fa-eye"></i>
           </a>
         </div>
