--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"><a href="https://spiralyze.com/about/" target="_blank">Spiralyze</a></h3>
+            <h3 class="mb-0"><a href="https://www.spiralyze.com/" target="_blank">Spiralyze</a></h3>
             <div class="subheading mb-3">QA Engineer</div>
             <p>Responsible for testing websites from different clients through A/B testing. I served as a Senior QA. My responsibilities include assigning QA tasks to Junior testers and overseeing all QA tickets before forwarding it to the Project Manager.</p>
           </div>
