Added Encora details

--- a/index.html
+++ b/index.html
@@ -105,9 +105,10 @@
           <div class="resume-content">
             <h3 class="mb-0"><a href="https://www.encora.com/about" target="_blank">Encora</a></h3>
             <div class="subheading mb-3">Quality Engineer</div>
+            <p>I was assigned to one of Encora's clients, a digital bank in the Philippines. My responsibilities included creating automated tests of the app's core platform using the Behave framework and collaborating with the development team on the features being developed through Agile methodology. I have also done manual testing using Postman to determine whether the API endpoints are working as expected.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2024 - Present</span>
+            <span class="text-primary">July 2024 - November 2024</span>
           </div>
         </div>
         
