--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="subheading mb-5"><a href="https://maps.app.goo.gl/ihtNiUfL1byvp3zF7" target="_blank">Jacksonville, FL USA 32219</a> · <a href="tel:+63947-963-2449">(+63) 947-963-2449</a> ·
           <a href="mailto:basillefelizsimplicio@gmail.com">basillefelizsimplicio@gmail.com</a>
         </div>
-    <p class="lead mb-5">Full-time Quality Engineer. Occasional Web Developer. Avid Jason Mraz fan.</p>
+    <p class="lead mb-5">Full-time QA Engineer. Occasional Web Developer. Avid Jason Mraz fan.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/basille-feliz-simplicio-78762166" target="_blank" label="LinkedIn Account" title="LinkedIn Account">
             <i class="fab fa-linkedin-in"></i>
