revert to davao

--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
         <h1 class="mb-0">Basille Feliz 
           <span class="text-primary">Simplicio</span>
         </h1>
-        <div class="subheading mb-5"><a href="https://maps.app.goo.gl/ihtNiUfL1byvp3zF7" target="_blank">Jacksonville, FL USA 32219</a> · <a href="tel:+63947-963-2449">(+63) 947-963-2449</a> ·
-          <a href="mailto:basillefelizsimplicio@gmail.com">basillefelizsimplicio@gmail.com</a>
+        <div class="subheading mb-5"><a href="https://g.co/kgs/Ag9ZQDk" target="_blank">Davao City, Philippines</a> · <a href="tel:+63947-963-2449">(+63) 947-963-2449</a> · <a href="mailto:basillefelizsimplicio@gmail.com">basillefelizsimplicio@gmail.com</a>
         </div>
     <p class="lead mb-5">Full-time QA Engineer. Occasional Web Developer. Avid Jason Mraz fan.</p>
         <div class="social-icons">
