--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <h1 class="mb-0">Basille Feliz 
           <span class="text-primary">Simplicio</span>
         </h1>
-        <div class="subheading mb-5"><a href="https://g.co/kgs/Ag9ZQDk" target="_blank">Davao City, Philippines</a> · <a href="tel:+63947-963-2449">(+63) 947-963-2449</a> · <a href="mailto:basillefelizsimplicio@gmail.com">basillefelizsimplicio@gmail.com</a>
+        <div class="subheading mb-5"><a href="https://g.co/kgs/irUwgy1" target="_blank">Jacksonville, FL</a> · <a href="tel:+19048529495">+1 (904)-852-9495</a> · <a href="mailto:basillefelizsimplicio@gmail.com">basillefelizsimplicio@gmail.com</a>
         </div>
     <p class="lead mb-5">Full-time QA Engineer. Occasional Web Developer. Avid Jason Mraz fan.</p>
         <div class="social-icons">
@@ -251,9 +251,11 @@
         </div>
         <div class="subheading mb-3">Testing Frameworks</div>
         <div class="container-fluid">
-            <div class="mb-3 col-md-4">Selenium</div>
-            <div class="mb-3 col-md-4">Robot Framework</div>
-            <div class="mb-3 col-md-4">Cypress</div>
+            <div class="mb-3 col-md-4"><a href="https://www.selenium.dev/" target="_blank">Selenium</a></div>
+            <div class="mb-3 col-md-4"><a href="https://behave.readthedocs.io/en/latest/" target="_blank">Behave</a></div>
+            <div class="mb-3 col-md-4"><a href="https://robotframework.org/" target="_blank">Robot Framework</a></div>
+            <div class="mb-3 col-md-4"><a href="https://www.cypress.io/" target="_blank">Cypress</div>
+            <div class="mb-3 col-md-4"><a href="https://nightwatchjs.org/" target="_blank">Nightwatch JS</div>
         </div>
         
 
