--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <h1 class="mb-0">Basille Feliz 
           <span class="text-primary">Simplicio</span>
         </h1>
-        <div class="subheading mb-5"><a href="https://g.co/kgs/irUwgy1" target="_blank">Jacksonville, FL</a> · <a href="tel:+19048529495">+1 (904)-852-9495</a> · <a href="mailto:basillefelizsimplicio@gmail.com">basillefelizsimplicio@gmail.com</a>
+        <div class="subheading mb-5"><a href="https://g.co/kgs/irUwgy1" target="_blank">Jacksonville, FL USA 32219</a> · <a href="tel:+19048529495">+1 (904)-852-9495</a> · <a href="mailto:basillefelizsimplicio@gmail.com">basillefelizsimplicio@gmail.com</a>
         </div>
     <p class="lead mb-5">Full-time QA Engineer. Occasional Web Developer. Avid Jason Mraz fan.</p>
         <div class="social-icons">
