ability to download resume

--- a/index.html
+++ b/index.html
@@ -86,8 +86,11 @@
           <a href="https://github.com/bashsimplicio" target="_blank" label="Github Account" title="Github Account">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://bit.ly/bash-resume-copy" download="https://bit.ly/bash-resume-copy" label="View Resume" title="View Resume" target="_blank">
+          <a href="https://bit.ly/bash-resume-copy" label="View Resume" title="View Resume" target="_blank">
             <i class="fa fa-eye"></i>
+          </a>
+          <a href="resume/resume_2025.pdf" label="Download Resume" title="Download Resume" download>
+            <i class="fa fa-download"></i>
           </a>
         </div>
       </div>
@@ -138,7 +141,7 @@
           <div class="resume-content">
             <h3 class="mb-0"><a href="https://www.ingenuity.ph/about-us/" target="_blank">Ingenuity Global Consulting</a></h3>
             <div class="subheading mb-3">Software Tester</div>
-            <p>In my seven years with Ingenuity, I have been to multiple roles and projects.</p><p>I was assigned to different projects involved in understanding the requirements, conducting web or mobile application tests applying the test scenarios I created, documenting issues found, and creating bug reports or tickets including detailed steps to reproduce, actual output, and expected results. I have run the scripts provided by the developers and executed tests using the subversion repository. Most of the projects I worked on used Agile methodology.</p><p>I was the main QA in an internal ERP project using the Odoo framework and created user documentation through Sphinx. As the main QA, I also served as a functional consultant for different clients using Odoo applications.</p><p>I was also a Software Developer for a limited time on an internal project to track daily updates from team members per project that was sent to clients via email on a regular basis. </p>
+            <p>In my seven years with Ingenuity, I have been to multiple roles and projects.</p><p>I was assigned to different projects involved in understanding the requirements, conducting web or mobile application tests applying the test scenarios I created, documenting issues found, and creating bug reports or tickets including detailed steps to reproduce, actual output, and expected results. I have run the scripts provided by the developers and executed tests using the subversion repository. Most of the projects I worked on used Agile methodology.</p><p>I was the main QA in an internal ERP project using the Odoo framework and created user documentation through Sphinx. As the main QA, I also became the functional consultant for different clients maximizing the Odoo applications as SAAS.</p><p>I was also a Software Developer for a limited time on an internal project to track daily updates from team members per project that was sent to clients via email on a regular basis. </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">June 2013 - July 2020</span>
