--- a/index.html
+++ b/index.html
@@ -260,6 +260,11 @@
             <div class="mb-3 col-md-4"><a href="https://www.cypress.io/" target="_blank">Cypress</div>
             <div class="mb-3 col-md-4"><a href="https://nightwatchjs.org/" target="_blank">Nightwatch JS</div>
         </div>
+        <div class="subheading mb-3">Test Management Tool</div>
+        <div class="container-fluid">
+            <div class="mb-3 col-md-4"><a href="https://www.testrail.com/" target="_blank">TestRail</a></div>
+            <div class="mb-3 col-md-4"><a href="https://zephyrdocs.atlassian.net/wiki/spaces/ZFJ0300/overview" target="_blank">Zephyr for Jira</a></div>
+        </div>
         
 
       </div>
