--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
   <link href="css/resume.min.css" rel="stylesheet">
   
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-N1RBXQEGCJ"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-72L5CHWS4G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-      gtag('config', 'G-N1RBXQEGCJ');
-  </script>
+  gtag('config', 'G-72L5CHWS4G');
+</script>
 
 </head>
 
@@ -260,7 +260,7 @@
             <div class="mb-3 col-md-4"><a href="https://www.cypress.io/" target="_blank">Cypress</div>
             <div class="mb-3 col-md-4"><a href="https://nightwatchjs.org/" target="_blank">Nightwatch JS</div>
         </div>
-        <div class="subheading mb-3">Test Management Tool</div>
+        <div class="subheading mb-3">Test Management Tools</div>
         <div class="container-fluid">
             <div class="mb-3 col-md-4"><a href="https://www.testrail.com/" target="_blank">TestRail</a></div>
             <div class="mb-3 col-md-4"><a href="https://zephyrdocs.atlassian.net/wiki/spaces/ZFJ0300/overview" target="_blank">Zephyr for Jira</a></div>
